Updated timer functionality and renamed files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
         "readline.h": "c",
         "repl.h": "c",
         "frozenmod.h": "c",
-        "pyexec.h": "c"
+        "pyexec.h": "c",
+        "header.h": "c"
     }
 }
