--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,5 +27,6 @@
         "frozenmod.h": "c",
         "pyexec.h": "c",
         "header.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
