folder re-organized and updated makefile

--- a/main/pystart/Makefile
+++ b/main/pystart/Makefile
@@ -20,7 +20,7 @@ include $(ROOTL)/py/py.mk
 include $(ROOTL)/py/mkrules.mk
 
 #build the frozen code that required duuring the compilation
-$(BUILD)/_frozen_mpy.c: frozentest.mpy $(BUILD)/genhdr/qstrdefs.generated.h 
+$(BUILD)/_frozen_mpy.c: ../headers/frozentest.mpy $(BUILD)/genhdr/qstrdefs.generated.h 
 	$(Q)$(ROOTL)/py/mpy-tool.py -f -q    $(BUILD)/genhdr/qstrdefs.preprocessed.h -mlongint-impl=none $< > $@ 
 
 all:  dependency output.xe
