--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,8 @@
         "repl.h": "c",
         "frozenmod.h": "c",
         "pyexec.h": "c",
-        "header.h": "c"
+        "header.h": "c",
+        "softtimer.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
